<?xml version="1.0" encoding="utf-8"?>



    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Geral.TelasFront.TelaCadaspf">

        <View
            android:layout_width="match_parent"
            android:layout_height="800dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/conteiner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="200dp"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="130dp"
            android:hint="E-mail"

            android:background="@drawable/caixa"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="200dp"
            android:text="@string/telefone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="240dp"
            android:background="@drawable/caixa"
            android:hint="TELEFONE"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginEnd="100dp"
            android:text="@string/data_nascimento"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="350dp"
            android:background="@drawable/caixa"
            android:hint="DATA"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="220dp"
            android:text="@string/nome"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="140dp"
            android:layout_height="60dp"

            android:layout_marginTop="460dp"
            android:layout_marginEnd="180dp"

            android:background="@drawable/caixa"

            android:hint="@string/nome"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

             />

        <EditText
            android:id="@+id/sobrenome"
            android:layout_width="170dp"
            android:layout_height="60dp"

            android:layout_marginStart="150dp"
            android:layout_marginTop="460dp"

            android:background="@drawable/caixa"

            android:hint="@string/sobrenome"


            android:importantForAutofill="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="540dp"
            android:layout_marginEnd="220dp"
            android:text="@string/senha"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_marginTop="570dp"
            android:layout_marginHorizontal="40dp"

            android:background="@drawable/caixa"

            android:hint="@string/senha"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />


        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="700dp"
            android:backgroundTint="@color/black"
            android:text="@string/cadastrar"
            android:textSize="20sp"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />


    </androidx.constraintlayout.widget.ConstraintLayout>
